apps/podinfo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: podinfo
  namespace: default
  labels:
    app: podinfo
speec:
type : ClusterIP
  selector:
    app: podinfo
  ports:
    - name: http
      port: 9898
      targetPort: 9898
