apps/podinfo/ingress.yaml
apiVersion : networking.k8s.io/v1
kind: Ingress
metadata :
  name: podinfo
  namespace: default
  labels:
    app: podinfo
spec :
  rules :
    - host : podinfo.127.0.0.1.nip.io
      http :
        paths :
          - path : /
            pathType : Prefix
            backend :
              service :
                name : podinfo
                port :
                  number : 9898
